Use a fixed width for the path <span>.
This lines up the progress bars nicely. It'll look ugly if you have a really long
filename, though.

--- a/stylesheets/merge-conflicts.less
+++ b/stylesheets/merge-conflicts.less
@@ -12,6 +12,10 @@
   .navigate:hover {
     background-color: @background-color-highlight;
   }
+
+  .path {
+    width: 20%;
+  }
 }
 
 .editor.conflicted {
